# 2DRPGMaker

./: CMakeLists.txt  LICENSE  README.md
src/: MainLoop.cpp  structs.hpp
src/Graphics/: WindowManager.cpp  WindowManager.h
